Fix some exception related issues

--- a/QBuilder/Views/Home/Index.cshtml
+++ b/QBuilder/Views/Home/Index.cshtml
@@ -19,14 +19,14 @@
         var rules_basic = {
             "condition": "AND",
             "rules": [
-              {
-                  "id": "1",
-                  "field": "",
-                  "type": "string",
-                  "input": "text",
-                  "operator": "equal",
-                  "value": ""
-              }
+                {
+                    "id": "1",
+                    "field": "",
+                    "type": "string",
+                    "input": "text",
+                    "operator": "equal",
+                    "value": ""
+                }
             ],
             "valid": true
         };
@@ -35,54 +35,54 @@
             id: '1',
             label: '',
             type: 'string'
-           } 
-         //   ,{
-        //    id: '2',
-        //    label: 'Category',
-        //    type: 'integer',
-        //    input: 'select',
-        //    values: {
-        //        1: 'Books',
-        //        2: 'Movies',
-        //        3: 'Music',
-        //        4: 'Tools',
-        //        5: 'Goodies',
-        //        6: 'Clothes'
-        //    },
-        //    operators: ['equal', 'not_equal', 'in', 'not_in', 'is_null', 'is_not_null']
-        //}, {
-        //    id: '3',
-        //    label: 'Price',
-        //    type: 'double',
-        //    validation: {
-        //        min: 0,
-        //        step: 0.01
-        //    }
-        //}, {
-        //    id: '4',
-        //    label: 'Datepicker',
-        //    type: 'date',
-        //    operators: ['equal', 'not_equal'],
-        //    validation: {
-        //        format: 'YYYY/MM/DD'
-        //    },
-        //    plugin: 'datepicker',
-        //    plugin_config: {
-        //        format: 'yyyy/mm/dd',
-        //        todayBtn: 'linked',
-        //        todayHighlight: true,
-        //        autoclose: true
-        //    }
+        }
+            //   ,{
+            //    id: '2',
+            //    label: 'Category',
+            //    type: 'integer',
+            //    input: 'select',
+            //    values: {
+            //        1: 'Books',
+            //        2: 'Movies',
+            //        3: 'Music',
+            //        4: 'Tools',
+            //        5: 'Goodies',
+            //        6: 'Clothes'
+            //    },
+            //    operators: ['equal', 'not_equal', 'in', 'not_in', 'is_null', 'is_not_null']
+            //}, {
+            //    id: '3',
+            //    label: 'Price',
+            //    type: 'double',
+            //    validation: {
+            //        min: 0,
+            //        step: 0.01
+            //    }
+            //}, {
+            //    id: '4',
+            //    label: 'Datepicker',
+            //    type: 'date',
+            //    operators: ['equal', 'not_equal'],
+            //    validation: {
+            //        format: 'YYYY/MM/DD'
+            //    },
+            //    plugin: 'datepicker',
+            //    plugin_config: {
+            //        format: 'yyyy/mm/dd',
+            //        todayBtn: 'linked',
+            //        todayHighlight: true,
+            //        autoclose: true
+            //    }
             //}
         ];
 
         $(document).ready(function () {
-            
+
             // Fix for Selectize
             $('#builder-import_export').on('afterCreateRuleInput.queryBuilder', function (e, rule) {
                 if (rule.filter.plugin == 'selectize') {
                     rule.$el.find('.rule-value-container').css('min-width', '200px')
-                      .find('.selectize-control').removeClass('form-control');
+                        .find('.selectize-control').removeClass('form-control');
                 }
             });
 
@@ -90,31 +90,31 @@
                 filters: myFilters,
                 rules: rules_basic
             });
-            if($('#builder-import_export').queryBuilder('reset') )
-            $('#parse-sql').on('click', function () {
-                var result = $('#builder-import_export').queryBuilder('getSQL', false, true);
-
-                if (result.sql.length) {
-                    console.log(result.sql);
-                    alert(result.sql);                    
-                }
-            });
+            //if ($('#builder-import_export').queryBuilder('reset'));
 
             $('#btn-reset').on('click', function () {
                 $('#builder-import_export').queryBuilder('reset');
             });
-            
+
             $('#parse-json').on('click', function () {
                 var result = $('#builder-import_export').queryBuilder('getRules');
 
                 if (!$.isEmptyObject(result)) {
-                    console.log(JSON.stringify(result, null, 2));
+                    //console.log(JSON.stringify(result, null, 2));
                     alert(JSON.stringify(result, null, 2));
+                }
+            });
+
+            $('#parse-sql').on('click', function () {
+                var result = $('#builder-import_export').queryBuilder('getSQL', false, true);
+                if (result.sql.length) {
+                    //console.log(result.sql);
+                    alert(result.sql);
                 }
             });
             //$('#builder-import_export').queryBuilder('setRulesFromSQL', "Name = '1' AND Salary <= 2345");
         });
-        
+
     </script>
 </body>
 
